--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/tajpure/kindle-sync/issues"
+  },
+  "dependencies": {
+    "nodemailer": "~1.4.0"
   }
 }
