--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "url": "https://github.com/tajpure/kindle-sync/issues"
   },
   "dependencies": {
-    "nodemailer": "~1.4.0"
+    "nodemailer": "~1.4.0",
+    "nodemailer-smtp-transport": "^1.0.3",
+    "watch": "^0.16.0"
   }
 }
